WIP(): wip publications

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,6 +38,14 @@ body.sticky-bottom-footer {
   }
 }
 
+.profile.float-right {
+  margin-left: 2rem;
+}
+
+.profile.float-left {
+  margin-right: 2rem;
+}
+
 // TODO: redefine content layout.
 
 /******************************************************************************
