--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -36,7 +36,14 @@ body.sticky-bottom-footer {
   img {
     width: 100%;
   }
+}
+
+.profile.float-right {
   margin-left: 2rem;
+}
+
+.contact-icons {
+  font-size: 2rem;
 }
 
 // TODO: redefine content layout.
