--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,11 +38,7 @@ body.sticky-bottom-footer {
   }
 }
 
-.profile.float-right {
-  margin-left: 2rem;
-}
-
-.contact-icons {
+.social .contact-icons {
   font-size: 2rem;
 }
 
