--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -53,6 +53,11 @@ body.sticky-bottom-footer {
 /******************************************************************************
  * Publications
  ******************************************************************************/
+.publications {
+  h2.bibliography {
+    color: var(--global-theme-color);
+  }
+}
 
 // TODO: redefine publications layout.
 
