--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -666,8 +666,8 @@ footer.sticky-bottom {
   }
 
   h2.bibliography {
-    color: var(--global-theme-color);
-    border-top: 1px solid var(--global-theme-color);
+    color: $purple-color;
+    border-top: 1px solid $purple-color;
     padding-top: 1rem;
     margin-top: 2rem;
     text-align: right;
