--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -666,7 +666,7 @@ footer.sticky-bottom {
   }
 
   h2.bibliography {
-    color: $purple-color;
+    color: var(--global-theme-color);
     border-top: 1px solid var(--global-divider-color);
     padding-top: 1rem;
     margin-top: 2rem;
